--- a/platform/gitea/files/config/config.yaml
+++ b/platform/gitea/files/config/config.yaml
@@ -16,7 +16,7 @@ repositories:
     owner: ops
     private: false
     migrate:
-      source: https://github.com/khuedoan/homelab
+      source: https://github.com/Jsakkos/k3s-homelab
       mirror: false
     hook: true
   - name: blog
