--- a/platform/tekton-pipelines/ingress.yaml
+++ b/platform/tekton-pipelines/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: &host tekton.khuedoan.com
+    - host: &host tekton.toolstowelsandfroods.com
       http:
         paths:
           - pathType: ImplementationSpecific
