--- a/apps/hajimari/values.yaml
+++ b/apps/hajimari/values.yaml
@@ -21,16 +21,16 @@ hajimari:
     defaultEnable: true
     namespaceSelector:
       any: true
-    globalBookmarks:
-      - group: Homelab
-        bookmarks:
-          - name: Documentation
-            url: https://homelab.toolstowelsandfroods.com
-          - name: Public GitHub repository
-            url: https://github.com/khuedoan/homelab
-      - group: Managed services
-        bookmarks:
-          - name: Terraform Cloud
-            url: https://app.terraform.io
-          - name: Cloudflare
-            url: https://dash.cloudflare.com
+    #globalBookmarks:
+     # - group: Homelab
+     #   bookmarks:
+     #     - name: Documentation
+     #       url: https://homelab.toolstowelsandfroods.com
+     #     - name: Public GitHub repository
+     #       url: https://github.com/khuedoan/homelab
+     # - group: Managed services
+     #   bookmarks:
+     #     - name: Terraform Cloud
+     #       url: https://app.terraform.io
+     #     - name: Cloudflare
+     #       url: https://dash.cloudflare.com
