--- a/apps/paperless-ngx/helm-release.yaml
+++ b/apps/paperless-ngx/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
       PAPERLESS_DBHOST: paperless-ngx-postgresql
       PAPERLESS_DBNAME: paperless-ngx
       PAPERLESS_DBUSER: paperless-ngx
-      PAPERLESS_DBPASS: {paperless-ngx-db-secret}
+      PAPERLESS_DBPASS: paperless-ngx-db-secret
       PAPERLESS_REDIS: redis://paperless-ngx-redis-master:6379
       USERMAP_UID: 33
       USERMAP_GID: 33
@@ -39,7 +39,7 @@ spec:
       PAPERLESS_CONSUMER_RECURSIVE: true
       PAPERLESS_CONSUMER_SUBDIRS_AS_TAGS: true
       PAPERLESS_OCR_LANGUAGE: eng
-      PAPERLESS_SECRET_KEY: {paperless-ngx-secret-key}
+      PAPERLESS_SECRET_KEY: paperless-ngx-secret-key
     service:
       main:
         ports:
