--- a/apps/paperless-ngx/templates/pvc.yaml
+++ b/apps/paperless-ngx/templates/pvc.yaml
@@ -21,7 +21,7 @@ metadata:
   namespace: paperless
 spec:
   volumeName: paperless-ngx-static-pv
-  storageClassName: nfc
+  storageClassName: nfs
   accessModes:
   - ReadWriteMany
   resources:
