--- a/apps/paperless-ngx/templates/secrets.yaml
+++ b/apps/paperless-ngx/templates/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: paperless-db-secret
+  name: paperless-secret-key
   namespace: paperless
 spec:
   secretStoreRef:
@@ -11,11 +11,15 @@ spec:
     template:
       engineVersion: v2
       data:
-        username: paperless-ngx
-        password: {{` "{{ .password }}" `}}
+        PAPERLESS_ADMIN_USER: paperless-ngx
+        PAPERLESS_ADMIN_PASSWORD: {{` "{{ .password }}" `}}
+        PAPERLESS_SECRET_KEY: {{' "{{ .secret_key }}" ' }}
   data:
+    - secretKey: secret_key
+      remoteRef:
+        key: /paperless-ngx
+        property: secret_key
     - secretKey: password
       remoteRef:
         key: /paperless-ngx/db
         property: password
-
