--- a/apps/paperless-ngx/templates/secrets.yaml
+++ b/apps/paperless-ngx/templates/secrets.yaml
@@ -13,7 +13,7 @@ spec:
       data:
         PAPERLESS_ADMIN_USER: paperless-ngx
         PAPERLESS_ADMIN_PASSWORD: {{` "{{ .password }}" `}}
-        PAPERLESS_SECRET_KEY: {{' "{{ .secret_key }}" ' }}
+        PAPERLESS_SECRET_KEY: {{` "{{ .secret_key }}" `}}
   data:
     - secretKey: secret_key
       remoteRef:
