--- a/apps/paperless-ngx/values.yaml
+++ b/apps/paperless-ngx/values.yaml
@@ -8,21 +8,21 @@ app-template:
     repository: ghcr.io/paperless-ngx/paperless-ngx
     tag: 1.12.2
 
-  initContainers:
-    copy-scripts:
-      image: ubuntu:22.04
-      command:
-        - /bin/bash
-        - -c
-        - |
-          cp /scripts/pushover-notifier.sh /mnt/scripts
-          chmod +x /mnt/scripts/*
-      volumeMounts:
-        - name: scripts
-          mountPath: /mnt/scripts
-        - name: notifier
-          mountPath: /scripts/pushover-notifier.sh
-          subPath: pushover-notifier.sh
+#  initContainers:
+#    copy-scripts:
+#      image: ubuntu:22.04
+#      command:
+#        - /bin/bash
+#        - -c
+#        - |
+#          cp /scripts/pushover-notifier.sh /mnt/scripts
+#          chmod +x /mnt/scripts/*
+#      volumeMounts:
+#        - name: scripts
+#          mountPath: /mnt/scripts
+#        - name: notifier
+#          mountPath: /scripts/pushover-notifier.sh
+#          subPath: pushover-notifier.sh
 
   env:
     COMPOSE_PROJECT_NAME: paperless
@@ -92,17 +92,17 @@ app-template:
       mountPath: /mnt/inbox
       type: nfs
       path: /volume1/paperless_inbox
-    notifier:
-      enabled: true
-      type: configMap
-      name: pushover-notifier
-      subPath: pushover-notifier.sh
-      mountPath: /scripts/pushover-notifier.sh
-      readOnly: true
-    scripts:
-      enabled: true
-      type: emptyDir
-      mountPath: /mnt/scripts
+ #   notifier:
+ #     enabled: true
+ #     type: configMap
+ #     name: pushover-notifier
+ #     subPath: pushover-notifier.sh
+ #     mountPath: /scripts/pushover-notifier.sh
+ #     readOnly: true
+ #   scripts:
+ #     enabled: true
+ #     type: emptyDir
+ #     mountPath: /mnt/scripts
 
   resources:
     requests:
