--- a/apps/paperless-ngx/values.yaml
+++ b/apps/paperless-ngx/values.yaml
@@ -80,7 +80,7 @@ app-template:
   persistence:
     data:
       enabled: true
-      storageClass: longhorn
+      existingClaim: paperless
       mountPath: /usr/src/paperless/data
     media:
       enabled: true
