--- a/apps/paperless-ngx/templates/paperless-pvc.yaml
+++ b/apps/paperless-ngx/templates/paperless-pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-hostpath
+  storageClassName: longhorn
   resources:
     requests:
       storage: 1Gi
