--- a/apps/paperless-ngx/templates/paperless-pvc.yaml
+++ b/apps/paperless-ngx/templates/paperless-pvc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: paperless
+  namespace: paperless
 spec:
   accessModes:
     - ReadWriteOnce
