--- a/apps/paperless-ngx/templates/pvc.yaml
+++ b/apps/paperless-ngx/templates/pvc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: paperless-ngx-static-pv
+  namespace: paperless
 spec:
   capacity:
     storage: 50Gi
