--- a/apps/paperless-ngx/values.yaml
+++ b/apps/paperless-ngx/values.yaml
@@ -79,8 +79,7 @@ app-template:
 
   persistence:
     data:
-      enabled: true
-      existingClaim: paperless
+      storageClass: longhorn
       mountPath: /usr/src/paperless/data
     media:
       enabled: true
