--- a/apps/paperless-ngx/templates/paperless-consume-pvc.yaml
+++ b/apps/paperless-ngx/templates/paperless-consume-pvc.yaml
@@ -1,12 +1,14 @@
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: paperless
+  name: paperless-ngx-consume
   namespace: paperless
 spec:
+  volumeName: paperless-ngx-consume-pv
+  storageClassName: nfs
   accessModes:
-    - ReadWriteOnce
-  storageClassName: longhorn
+  - ReadWriteMany
   resources:
     requests:
       storage: 1Gi
