--- a/apps/paperless-ngx/values.yaml
+++ b/apps/paperless-ngx/values.yaml
@@ -88,7 +88,7 @@ app-template:
     inbox:
       enabled: true
       mountPath: /mnt/inbox
-      existingClaim: paperless-ngx-data
+      existingClaim: paperless-ngx-consume
  #   notifier:
  #     enabled: true
  #     type: configMap
