update nfs client

--- a/apps/paperless-ngx/values.yaml
+++ b/apps/paperless-ngx/values.yaml
@@ -84,11 +84,11 @@ app-template:
     media:
       enabled: true
       mountPath: /mnt/paperless
-      existingClaim: paperless-ngx-data
+      storageClass: nfs-client
     inbox:
       enabled: true
       mountPath: /mnt/inbox
-      existingClaim: paperless-ngx-consume
+      storageClass: nfs-client
  #   notifier:
  #     enabled: true
  #     type: configMap
