--- a/apps/testpod/pod.yaml
+++ b/apps/testpod/pod.yaml
@@ -6,13 +6,6 @@ apiVersion: v1
 metadata:
   name: pod-using-nfs
 spec:
-  # Add the server as an NFS volume for the pod
-  volumes:
-    - name: nfs-volume
-      nfs: 
-        # URL for the NFS server
-        server: 192.168.1.89
-        path: /volume1/paperless/data
 
   # In this container, we'll mount the NFS volume
   # and write the date to a file inside it.
@@ -21,9 +14,13 @@ spec:
       image: alpine
 
       # Mount the NFS volume in the container
-      volumeMounts:
-        - name: nfs-volume
+      persistence:
+        data:
+          enabled: true
           mountPath: /var/nfs
+          type: nfs
+          server: "192.168.1.89"
+          path: /volume1/Docs/paperless
 
       # Write to a file inside our NFS
       command: ["/bin/sh"]
