--- a/system/csi-driver-nfs/Chart.yaml
+++ b/system/csi-driver-nfs/Chart.yaml
@@ -1,7 +1,8 @@
-apiVersion: v2
+apiVersion: v1
 name: csi-driver-nfs
 version: 0.0.0
 dependencies:
   - name: csi-driver-nfs
   - version: v4.1.0
+  - appVersion: v4.1.0
   - repository: https://raw.githubusercontent.com/kubernetes-csi/csi-driver-nfs/master/charts
