--- a/apps/paperless-ngx/values.yaml
+++ b/apps/paperless-ngx/values.yaml
@@ -1,24 +1,20 @@
 app-template:
+  metadata:
+    name: paperless
+    namespace: paperless
+  controller:
+    annotations:
+      reloader.stakater.com/auto: "true"
+    type: statefulset
+    replicas: 1
   image:
     repository: ghcr.io/paperless-ngx/paperless-ngx
     tag: 1.12.2
-
-#  initContainers:
-#    copy-scripts:
-#      image: ubuntu:22.04
-#      command:
-#        - /bin/bash
-#        - -c
-#        - |
-#          cp /scripts/pushover-notifier.sh /mnt/scripts
-#          chmod +x /mnt/scripts/*
-#      volumeMounts:
-#        - name: scripts
-#          mountPath: /mnt/scripts
-#        - name: notifier
-#          mountPath: /scripts/pushover-notifier.sh
-#          subPath: pushover-notifier.sh
-
+  volumeMounts:
+    - name: inbox
+      mountPath: "/mnt/inbox"
+    - name: media
+      mountPath: "/mnt/paperless"
   env:
     COMPOSE_PROJECT_NAME: paperless
     PAPERLESS_CONSUMER_POLLING: "60"
@@ -72,30 +68,16 @@ app-template:
     fsGroup: 100
     fsGroupChangePolicy: "OnRootMismatch"
 
-  persistence:
-    data:
+  volumes:
+    - name: data
       storageClass: longhorn
       mountPath: /usr/src/paperless/data
-    media:
-      enabled: true
-      mountPath: /mnt/paperless
-      existingClaim: paperless-media-pvc
-    inbox:
-      enabled: true
-      mountPath: /mnt/inbox
-      existingClaim: paperless-consume-pvc
- #   notifier:
- #     enabled: true
- #     type: configMap
- #     name: pushover-notifier
- #     subPath: pushover-notifier.sh
- #     mountPath: /scripts/pushover-notifier.sh
- #     readOnly: true
- #   scripts:
- #     enabled: true
- #     type: emptyDir
- #     mountPath: /mnt/scripts
-
+    - name: media
+      persistentVolumeClaim: 
+        claimName: paperless-media-pvc
+   - name: inbox
+      persistentVolumeClaim: 
+        claimName: paperless-consume-pvc
   resources:
     requests:
       cpu: 23m
