Revert "update mounts"
This reverts commit c0992ee30063572fb66ccc5b8b00cbe08bdaaa43.

--- a/apps/paperless-ngx/values.yaml
+++ b/apps/paperless-ngx/values.yaml
@@ -1,20 +1,24 @@
 app-template:
-  metadata:
-    name: paperless
-    namespace: paperless
-  controller:
-    annotations:
-      reloader.stakater.com/auto: "true"
-    type: statefulset
-    replicas: 1
   image:
     repository: ghcr.io/paperless-ngx/paperless-ngx
     tag: 1.12.2
-  volumeMounts:
-    - name: inbox
-      mountPath: "/mnt/inbox"
-    - name: media
-      mountPath: "/mnt/paperless"
+
+#  initContainers:
+#    copy-scripts:
+#      image: ubuntu:22.04
+#      command:
+#        - /bin/bash
+#        - -c
+#        - |
+#          cp /scripts/pushover-notifier.sh /mnt/scripts
+#          chmod +x /mnt/scripts/*
+#      volumeMounts:
+#        - name: scripts
+#          mountPath: /mnt/scripts
+#        - name: notifier
+#          mountPath: /scripts/pushover-notifier.sh
+#          subPath: pushover-notifier.sh
+
   env:
     COMPOSE_PROJECT_NAME: paperless
     PAPERLESS_CONSUMER_POLLING: "60"
@@ -68,16 +72,30 @@ app-template:
     fsGroup: 100
     fsGroupChangePolicy: "OnRootMismatch"
 
-  volumes:
-    - name: data
+  persistence:
+    data:
       storageClass: longhorn
       mountPath: /usr/src/paperless/data
-    - name: media
-      persistentVolumeClaim: 
-        claimName: paperless-media-pvc
-   - name: inbox
-      persistentVolumeClaim: 
-        claimName: paperless-consume-pvc
+    media:
+      enabled: true
+      mountPath: /mnt/paperless
+      existingClaim: paperless-media-pvc
+    inbox:
+      enabled: true
+      mountPath: /mnt/inbox
+      existingClaim: paperless-consume-pvc
+ #   notifier:
+ #     enabled: true
+ #     type: configMap
+ #     name: pushover-notifier
+ #     subPath: pushover-notifier.sh
+ #     mountPath: /scripts/pushover-notifier.sh
+ #     readOnly: true
+ #   scripts:
+ #     enabled: true
+ #     type: emptyDir
+ #     mountPath: /mnt/scripts
+
   resources:
     requests:
       cpu: 23m
