--- a/apps/paperless-ngx/templates/secrets.yaml
+++ b/apps/paperless-ngx/templates/secrets.yaml
@@ -11,7 +11,7 @@ spec:
     template:
       engineVersion: v2
       data:
-        password: '{{ .password }}'
+        password: {{` "{{ .password }}" `}}
   data:
     - secretKey: secret_key
       remoteRef:
