--- a/apps/paperless-ngx/templates/secrets.yaml
+++ b/apps/paperless-ngx/templates/secrets.yaml
@@ -13,7 +13,7 @@ spec:
       data:
         password: {{` "{{ .password }}" `}}
   data:
-    - secretKey: secret_key
+    - secretKey: password
       remoteRef:
         key: /paperless-ngx
-        property: password
+        property: secret_key
