--- a/apps/paperless-ngx/templates/secrets.yaml
+++ b/apps/paperless-ngx/templates/secrets.yaml
@@ -8,12 +8,14 @@ spec:
     kind: ClusterSecretStore
     name: vault
   target:
-    template:
-      engineVersion: v2
-      data:
-        password: {{` "{{ .password }}" `}}
+    name: paperless-secrets
+    creationPolicy: Owner
   data:
-    - secretKey: password
+    - secretKey: PAPERLESS_ADMIN_PASSWORD
+      remoteRef:
+        key: /paperless-ngx/db
+        property: password
+    - secretKey: PAPERLESS_SECRET_KEY
       remoteRef:
         key: /paperless-ngx
         property: secret_key
