--- a/apps/paperless-ngx/values.yaml
+++ b/apps/paperless-ngx/values.yaml
@@ -40,10 +40,16 @@ app-template:
     USERMAP_UID: 1028
     USERMAP_GID: 100
     PAPERLESS_ADMIN_USER: paperless_admin
-    PAPERLESS_ADMIN_PASSWORD: 
-      existingSecret: paperless-admin-secret
-    PAPERLESS_SECRET_KEY: 
-      existingSecret: paperless-secret-key
+    PAPERLESS_ADMIN_PASSWORD:
+      valueFrom:
+        secretKeyRef:
+          name: paperless-secrets
+          key: PAPERLESS_ADMIN_PASSWORD
+    PAPERLESS_SECRET_KEY:
+      valueFrom:
+        secretKeyRef:
+          name: paperless-secrets
+          key: PAPERLESS_SECRET_KEY
 
   service:
     main:
