--- a/apps/paperless-ngx/templates/secrets.yaml
+++ b/apps/paperless-ngx/templates/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: paperless-secret-key
+  name: paperless-secrets
   namespace: paperless
 spec:
   secretStoreRef:
