--- a/apps/plex/values.yaml
+++ b/apps/plex/values.yaml
@@ -1,10 +1,7 @@
 app-template:
   image:
     repository: ghcr.io/onedr0p/plex
-    tag: 1.30.2.6563-3d4dc0cce@sha256:d0d3e5e75f5ed86843d123cd84bb1f54a0593ec26c908410548862607af880bf
-  controller:
-    replicas: 1
-    type: statefulset
+    tag: 1.31.0.6654-02189b09f
   env:
     TZ: America/Los_Angeles
   service:
