--- a/apps/paperless/values.yaml
+++ b/apps/paperless/values.yaml
@@ -67,6 +67,7 @@ app-template:
       enabled: true
       ingressClassName: nginx
       annotations:
+        cert-manager.io/cluster-issuer: letsencrypt-prod     
         hajimari.io/enable: "true"
         hajimari.io/icon: file-document
         hajimari.io/appName: Paperless
