--- a/system/ingress-nginx/values.yaml
+++ b/system/ingress-nginx/values.yaml
@@ -6,5 +6,8 @@ ingress-nginx:
       enabled: true
       serviceMonitor:
         enabled: true
+    extraArgs:
+      default-ssl-certificate: |-
+        networking/toolstowelsandfroods-com-tls
   tcp:
     22: gitea/gitea-ssh:22
