--- a/apps/paperless/values.yaml
+++ b/apps/paperless/values.yaml
@@ -68,10 +68,12 @@ app-template:
       ingressClassName: nginx
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-prod     
+        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         hajimari.io/enable: "true"
         hajimari.io/icon: file-document
         hajimari.io/appName: Paperless
         hajimari.io/info: Document management system that transforms your physical documents into a searchable online archive
+        
       hosts:
        - host: &host paperless.toolstowelsandfroods.com
          paths:
