--- a/monitoring/kubernetes-dashboard/Chart.yaml
+++ b/monitoring/kubernetes-dashboard/Chart.yaml
@@ -3,5 +3,5 @@ name: kubernetes-dashboard
 version: 0.0.0
 dependencies:
   - name: kubernetes-dashboard
-    version: v2.7.0
+    version: 6.0.0
     repository: https://kubernetes.github.io/dashboard/
