--- a/monitoring/kubernetes-dashboard/values.yaml
+++ b/monitoring/kubernetes-dashboard/values.yaml
@@ -1,113 +1,27 @@
-image:
-  ## Repository for container
-  repository: kubernetesui/dashboard
-  tag: ""  # If not defined, uses appVersion of Chart.yaml
-  pullPolicy: IfNotPresent
-  pullSecrets: []
+kubernetes-dashboard:
+  image:
+    ## Repository for container
+    repository: kubernetesui/dashboard
+    tag: ""  # If not defined, uses appVersion of Chart.yaml
+    pullPolicy: IfNotPresent
+    pullSecrets: []
 
-## Number of replicas
-replicaCount: 1
+  ## Number of replicas
+  replicaCount: 1
 
-## @param commonLabels Labels to add to all deployed objects
-##
-commonLabels: {}
-## @param commonAnnotations Annotations to add to all deployed objects
-##
-commonAnnotations: {}
+  extraArgs:
+   - --enable-skip-login
+   - --disable-settings-authorizer
+   - --enable-insecure-login
 
-## Here annotations can be added to the kubernetes dashboard deployment
-annotations: {}
-## Here labels can be added to the kubernetes dashboard deployment
-labels: {}
-
-## Additional container arguments
-##
-extraArgs:
-  - --enable-skip-login
-  - --disable-settings-authorizer
-  - --enable-insecure-login
-# extraArgs:
-#   - --enable-skip-login
-#   - --enable-insecure-login
-#   - --system-banner="Welcome to Kubernetes"
-
-## Additional container environment variables
-##
-extraEnv: []
-# - name: SOME_VAR
-#   value: 'some value'
-
-## Additional volumes to be added to kubernetes dashboard pods
-##
-extraVolumes: []
-# - name: dashboard-kubeconfig
-#   secret:
-#     defaultMode: 420
-#     secretName: dashboard-kubeconfig
-
-## Additional volumeMounts to be added to kubernetes dashboard container
-##
-extraVolumeMounts: []
-# - mountPath: /kubeconfig
-#   name: dashboard-kubeconfig
-#   readOnly: true
-
-## Array of extra K8s manifests to deploy
-##
-extraManifests: []
-# - apiVersion: v1
-#   kind: ConfigMap
-#   metadata:
-#     name: additional-configmap
-#   data:
-#     mykey: myvalue
-
-## Annotations to be added to kubernetes dashboard pods
-# podAnnotations:
-
-## SecurityContext to be added to kubernetes dashboard pods
-## To disable set the following configuration to null:
-# securityContext: null
 securityContext:
   seccompProfile:
     type: RuntimeDefault
-
-## SecurityContext defaults for the kubernetes dashboard container and metrics scraper container
-## To disable set the following configuration to null:
-# containerSecurityContext: null
 containerSecurityContext:
   allowPrivilegeEscalation: false
   readOnlyRootFilesystem: true
   runAsUser: 1001
   runAsGroup: 2001
-
-## @param podLabels Extra labels for OAuth2 Proxy pods
-## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
-##
-podLabels: {}
-## @param podAnnotations Annotations for OAuth2 Proxy pods
-## ref: https://kubernetes.io/docs/concepts/overview/working-with-objects/annotations/
-##
-podAnnotations: {}
-
-## Node labels for pod assignment
-## Ref: https://kubernetes.io/docs/user-guide/node-selection/
-##
-nodeSelector: {}
-
-## List of node taints to tolerate (requires Kubernetes >= 1.6)
-tolerations: []
-#  - key: "key"
-#    operator: "Equal|Exists"
-#    value: "value"
-#    effect: "NoSchedule|PreferNoSchedule|NoExecute"
-
-## Affinity for pod assignment
-## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
-affinity: {}
-
-## Name of Priority Class of pods
-# priorityClassName: ""
 
 ## Pod resource requests & limits
 resources:
@@ -124,51 +38,27 @@ resources:
 protocolHttp: false
 
 
-ingress:
+  ingress:
   ## If true, Kubernetes Dashboard Ingress will be created.
   ##
-  enabled: true
-  ingressClassName: nginx
-  annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-prod
-    nginx.ingress.kubernetes.io/whitelist-source-range: |
-      10.0.0.0/8,172.16.0.0/12,192.168.50.0/24,192.168.1.0/24
-    hajimari.io/icon: mdi:kubernetes
+    main:
+      enabled: true
+      ingressClassName: nginx
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt-prod
+        nginx.ingress.kubernetes.io/whitelist-source-range: |
+          10.0.0.0/8,172.16.0.0/12,192.168.50.0/24,192.168.1.0/24
+        hajimari.io/icon: mdi:kubernetes
     
-  hosts:
-    - host: &host kubernetes.toolstowelsandfroods.com
-      paths:
-        - path: /
-          pathType: Prefix
-  tls:
-    - secretName: kubernetes-dashboard-tls-certificate
       hosts:
-        - *host
-
-# Global dashboard settings
-settings:
-  {}
-  ## Cluster name that appears in the browser window title if it is set
-  # clusterName: ""
-  ## Max number of items that can be displayed on each list page
-  # itemsPerPage: 10
-  ## Number of seconds between every auto-refresh of logs
-  # logsAutoRefreshTimeInterval: 5
-  ## Number of seconds between every auto-refresh of every resource. Set 0 to disable
-  # resourceAutoRefreshTimeInterval: 5
-  ## Hide all access denied warnings in the notification panel
-  # disableAccessDeniedNotifications: false
-
-## Pinned CRDs that will be displayed in dashboard's menu
-pinnedCRDs:
-  []
-  # - kind: customresourcedefinition
-  ##  Fully qualified name of a CRD
-  #   name: prometheuses.monitoring.coreos.com
-  ##  Display name
-  #   displayName: Prometheus
-  ##  Is this CRD namespaced?
-  #   namespaced: true
+        - host: &host kubernetes.toolstowelsandfroods.com
+          paths:
+            - path: /
+              pathType: Prefix
+      tls:
+        - secretName: kubernetes-dashboard-tls-certificate
+          hosts:
+            - *host
 
 ## Metrics Scraper
 ## Container to scrape, store, and retrieve a window of time from the Metrics Server.
