--- a/automation/home-assistant/values.yaml
+++ b/automation/home-assistant/values.yaml
@@ -34,10 +34,20 @@ app-template:
       ingressClassName: nginx
       annotations:
         cert-manager.io/cluster-issuer: letsencrypt-prod
+        nginx.ingress.kubernetes.io/backend-protocol: HTTPS
         hajimari.io/enable: "true"
         hajimari.io/icon: home-assistant
         hajimari.io/appName: Home Assistant
         hajimari.io/info: Home automation that puts local control and privacy first
+      hosts:
+        - host: &host ha.toolstowelsandfroods.com
+          paths:
+            - path: /
+              pathType: Prefix
+      tls:
+        - secretName: home-assistant-tls-certificate
+          hosts:
+            - *host
         
   persistence:
     config:
