--- a/apps/paperless/values.yaml
+++ b/apps/paperless/values.yaml
@@ -24,20 +24,12 @@ app-template:
     PAPERLESS_TIME_ZONE: "America/Los_Angeles"
     PAPERLESS_CONSUMPTION_DIR: /mnt/inbox
     PAPERLESS_MEDIA_ROOT: /mnt/paperless
-    PAPERLESS_POST_CONSUME_SCRIPT: /mnt/scripts/pushover-notifier.sh
     USERMAP_UID: 1000
     USERMAP_GID: 1000
     PAPERLESS_ADMIN_USER: paperless_admin
-    PAPERLESS_ADMIN_PASSWORD:
-      valueFrom:
-        secretKeyRef:
-          name: paperless-secrets
-          key: PAPERLESS_ADMIN_PASSWORD
-    PAPERLESS_SECRET_KEY:
-      valueFrom:
-        secretKeyRef:
-          name: paperless-secrets
-          key: PAPERLESS_SECRET_KEY
+  envFrom:
+    - secretRef:
+        name: paperless-secrets
 
   service:
     main:
@@ -65,7 +57,7 @@ app-template:
           hosts:
             - *host
   podSecurityContext:
-    fsGroup: 100
+    fsGroup: 1000
     fsGroupChangePolicy: "OnRootMismatch"
 
   persistence:
