--- a/monitoring/kubernetes-dashboard/values.yaml
+++ b/monitoring/kubernetes-dashboard/values.yaml
@@ -31,6 +31,7 @@ kubernetes-dashboard:
       enabled: true
       ingressClassName: nginx
       annotations:
+        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         cert-manager.io/cluster-issuer: letsencrypt-prod
         hajimari.io/icon: mdi:kubernetes 
         hajimari.io/appName: Dashboard
