--- a/apps/plex/values.yaml
+++ b/apps/plex/values.yaml
@@ -49,6 +49,6 @@ app-template:
         storageClass: longhorn
       media:
         enabled: true
-        mountPath: /storage/media
+        mountPath: /mnt/media
         existingClaim: plex-media-pvc
 
