--- a/apps/plex/values.yaml
+++ b/apps/plex/values.yaml
@@ -44,6 +44,9 @@ app-template:
     fsGroupChangePolicy: "OnRootMismatch"
 
   persistence:
+    config:
+      enabled: true
+      storageClass: longhorn
     media:
       enabled: true
       type: nfs
