--- a/apps/plex/values.yaml
+++ b/apps/plex/values.yaml
@@ -37,6 +37,12 @@ app-template:
         - secretName: plex-tls-certificate
           hosts:
             - *host
+  podSecurityContext:
+    runAsUser: 1000
+    runAsGroup: 1000
+    fsGroup: 1000
+    fsGroupChangePolicy: "OnRootMismatch"
+    
   persistence:
     config:
       enabled: true
