--- a/automation/home-assistant/values.yaml
+++ b/automation/home-assistant/values.yaml
@@ -15,7 +15,7 @@ app-template:
   service:
     main:
       type: LoadBalancer
-      externalIPs: "192.168.50.103"
+      externalIPs: [192.168.50.103]
       externalTrafficPolicy: Local
       ports:
         http:
