--- a/monitoring/kubernetes-dashboard/values.yaml
+++ b/monitoring/kubernetes-dashboard/values.yaml
@@ -68,8 +68,8 @@ kubernetes-dashboard:
     create: true
     # The name of the service account to use.
     # If not set and create is true, a name is generated using the fullname template
-    name:
-
+    name: admin-user
+    namespace: kubernetes-dashboard
   livenessProbe:
     # Number of seconds to wait before sending first probe
     initialDelaySeconds: 30
