--- a/apps/immich/ks.yaml
+++ b/apps/immich/ks.yaml
@@ -1,7 +1,7 @@
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.trux.dev/kustomization_v1beta2.json
 apiVersion: argoproj.io/v1alpha1
-kind: Application
+kind: Deployment
 metadata:
   name: cluster-apps-immich
   namespace: argocd
