--- a/apps/plex/values.yaml
+++ b/apps/plex/values.yaml
@@ -12,6 +12,7 @@ app-template:
       enabled: true
       type: LoadBalancer
       externalTrafficPolicy: Local
+      loadBalancerIP: 192.168.50.225
       ports:
         http:
           port: 32400
