--- a/apps/immich/templates/secrets.yaml
+++ b/apps/immich/templates/secrets.yaml
@@ -12,17 +12,17 @@ spec:
   data:
     - secretKey: DB_USERNAME
       remoteRef:
-        key: /immich
+        key: /immich/
         property: DB_USERNAME
     - secretKey: DB_PASSWORD
       remoteRef:
-        key: /immich
+        key: /immich/
         property: DB_PASSWORD
     - secretKey: JWT_SECRET
       remoteRef:
-        key: /immich
+        key: /immich/
         property: JWT_SECRET
     - secretKey: POSTGRES_SUPER_PASS
       remoteRef:
-        key: /immich
+        key: /immich/
         property: POSTGRES_SUPER_PASS
